--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.geekbrains</groupId>
-    <artifactId>git_gb_backend_test</artifactId>
+    <artifactId>git_gb_backend</artifactId>
     <version>1.0</version>
 
     <dependencies>
